# cs180-21-CryPlusPlus

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakelists.txt  Makefile  README.md  cmake_install.cmake  main  runTests
.github/workflows/: ci.yml
Server/: BoostServer.cpp  Server_Start
Source/: ReadData.h
crydb/: next.config.js  package-lock.json  package.json  tailwind.config.js
crydb/app/: layout.jsx  page.css  page.jsx
crydb/app/context/: UserContext.jsx
crydb/app/main/: page.jsx
crydb/components/: AddDocuments.jsx  Boolean.jsx  Console.jsx  CreateCollection.jsx  DeleteCollection.jsx  DeleteDocument.jsx  DisplayCollection.jsx  DisplayToggleSwitch.jsx  DocumentModal.jsx  DropdownMenu.jsx  DropdownMenuState.jsx  Menu.jsx  Queries.jsx  Query.jsx  SortBy.jsx  Table.jsx  TextInput.jsx
crydb/src/components/: Welcome.jsx
crydb/src/pages/: App.js
crydb/utils/: helpers.js
src/: .BoostServer.cpp.swp  BoostServer.cpp  Collection.h  Collections.h  CsvToJson.h  Database.h  Document.cpp  Document.h  JsonComparator.h  JsonToCsv.h  OLD_CODE.h  Query.h  ReadCsvData.h  ReadData.h  ReadJsonData.h  Sort.h  WriteCsvData.h  WriteData.h  a.out  main  main.c  main.cpp  main.cpp.bak  sort.h  test_nested.json  test_valid.csv
tests/: JsonToCsvTests.cpp  Tests.cpp  collectionTests.cpp  csvToJsonTests.cpp  databaseTests.cpp  queryTests.cpp  readTests.cpp  sortTests.cpp
tests/test_data/: WORKED_.json  contacts.json  output.csv  sample.json  test_invalid.csv  test_valid.csv  test_valid.json
